Connected to database and show data to Home

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 :root {
-  --primary: #160151;
-  --secondary: #620194;
-  --white: #fff;
-  --black: #000;
+    --primary: #160151;
+    --secondary: #620194;
+    --white: #fff;
+    --black: #000;
 }
 
 /* Reset */
@@ -12,40 +12,39 @@ p,
 a,
 ul,
 li {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
-  font-family: "Montserrat", sans-serif;
-  font-weight: normal;
-  color: var(--white);
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+    font-family: "Montserrat", sans-serif;
+    font-weight: normal;
+    color: var(--white);
 }
 li {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 .d-flex {
-  display: flex !important;
-  flex-direction: column;
+    display: flex !important;
+    flex-direction: column;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
 
 button {
-  background: none;
-  border: none;
+    background: none;
+    border: none;
 }
 
 /* Base Style */
 body {
-  background-color: var(--primary);
-  overflow-x: hidden;
-  display: flex;
+    background-color: var(--primary);
+    overflow-x: hidden;
 }
 
 /* Fonts */
@@ -53,252 +52,263 @@ body {
 
 /* topbar */
 .topbar {
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
-  height: 6vh;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  align-content: center;
-  flex-direction: row;
-  background-color: var(--secondary);
-  width: 100vw;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+    height: 6vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+    background-color: var(--secondary);
+    width: 100vw;
 }
 
 .topbar .left-bar {
-  display: flex;
-  width: 20vw;
-  justify-content: space-evenly;
+    display: flex;
+    width: 20vw;
+    justify-content: space-evenly;
 }
 
 .navigation {
-  display: flex;
-  justify-content: center;
+    display: flex;
+    justify-content: center;
 }
 
 #nav-btn {
-  background-color: var(--secondary);
-  position: fixed;
-  width: 3vw;
-  height: 15vh;
-  top: 25vh;
-  right: 0px;
-  border-bottom-left-radius: 5px;
-  border-top-left-radius: 5px;
+    background-color: var(--secondary);
+    position: fixed;
+    width: 3vw;
+    height: 15vh;
+    top: 25vh;
+    right: 0px;
+    border-bottom-left-radius: 5px;
+    border-top-left-radius: 5px;
 }
 
 .nav-panel {
-  position: fixed;
-  width: 80vw;
-  background-color: var(--white);
-  border-radius: 20px;
-  display: none;
-  bottom: 1vh;
-  animation: showNav 0.5s cubic-bezier(0.57, 0.01, 0, 1.38);
+    position: fixed;
+    width: 80vw;
+    background-color: var(--white);
+    border-radius: 20px;
+    display: none;
+    bottom: 1vh;
+    animation: showNav 0.5s cubic-bezier(0.57, 0.01, 0, 1.38);
 }
 
 @keyframes showNav {
-  0% {
-    bottom: -10vh;
-  }
+    0% {
+        bottom: -10vh;
+    }
 
-  100% {
-    bottom: 1vh;
-  }
+    100% {
+        bottom: 1vh;
+    }
 }
 
 .nav-panel ul {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-content: space-around;
-  align-items: center;
-  justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: space-around;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .react {
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
 
 .react-panel {
-  width: 60vw;
-  background-color: var(--white);
-  border-radius: 15px;
-  position: fixed;
-  bottom: 3vh;
-  animation: showNav 0.5s cubic-bezier(0.57, 0.01, 0, 1.38);
+    width: 60vw;
+    background-color: var(--white);
+    border-radius: 15px;
+    position: fixed;
+    bottom: 3vh;
+    animation: showNav 0.5s cubic-bezier(0.57, 0.01, 0, 1.38);
 }
 
 .react-panel ul {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-content: space-around;
-  align-items: center;
-  justify-content: space-evenly;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-content: space-around;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .profile-pic {
-  border-radius: 50%;
+    border-radius: 50%;
+    width: 2rem;
+}
+
+.profile-name {
+  font-weight: 600;
 }
 
 .card-post {
-  background-color: var(--secondary);
-  display: flex;
-  flex-direction: column;
-  border-radius: 20px;
-  width: 90vw;
+    background-color: var(--secondary);
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    width: 90vw;
 }
 
 .top-card {
-  margin: 0.5em 0;
-  display: flex;
-  justify-content: space-between;
-  align-items: center
+    margin: 0.5em 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .text-time {
-  font-size: 0.4rem;
+  margin-left: 2px;
+    font-size: 0.6rem;
 }
 
 .top-card-left {
-  display: flex;
-  justify-content: space-around;
-  width: 20vh;
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
 }
 
 .card-post .image-card img {
-  border-radius: 20px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
+    border-radius: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
 
 .card-post .description-card {
-  margin-top: 0.5em;
-  display: flex;
-  width: 100%;
-  align-items: flex-start;
+    margin-top: 0.5em;
+    display: flex;
+    width: 100%;
+    align-items: flex-start;
 }
 
 .card-post .description-card p {
-  font-size: 0.8em;
-  font-weight: 500;
-  margin-left: 1em;
+    font-size: 0.8em;
+    font-weight: 500;
+    margin-left: 1em;
 }
 
 .card-post .description-card a {
-  display: flex;
+    display: flex;
+}
+
+.card-post .description-post {
+    font-size: 0.8em;
+    display: none;
 }
 
 .card-panel .icon-card {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-content: center;
-  align-items: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-content: center;
+    align-items: center;
 }
 
 .card-panel .icon-card li {
-  margin-left: 0.5em;
+    margin-left: 0.5em;
 }
 
 .card-post .btn-category {
-  border: 1px solid var(--white);
-  border-radius: 0.5rem;
-  color: var(--white);
-  transition: 1s ease-in;
-  font-weight: 700;
+    border: 1px solid var(--white);
+    border-radius: 0.5rem;
+    color: var(--white);
+    transition: 1s ease-in;
+    font-weight: 700;
 }
 
 .card-post .btn-category:hover {
-  background-color: var(--white);
-  border: 1px solid var(--primary);
-  border-radius: 0.5rem;
-  color: var(--primary);
+    background-color: var(--white);
+    border: 1px solid var(--primary);
+    border-radius: 0.5rem;
+    color: var(--primary);
 }
 
 #more {
-  display: none;
+    display: none;
 }
 
 #myBtn {
-  color: rgb(153, 148, 148);
-  font-weight: 600;
+    color: rgb(153, 148, 148);
+    font-weight: 600;
 }
 
 .offcanvas-bottom {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  /* width: 90vw; */
-  background-color: var(--primary);
-  align-items: center;
-  height: fit-content;
-  max-height: 80vh;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    /* width: 90vw; */
+    background-color: var(--primary);
+    align-items: center;
+    height: fit-content;
+    max-height: 80vh;
 }
 
 .card-comment {
-  display: flex;
-  width: 90vw;
+    display: flex;
+    width: 90vw;
 }
 
 .top-card-comment {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: flex-end;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .card-content-comment {
-  padding: 0.5em;
-  background-color: var(--white);
-  border-radius: 1em;
+    padding: 0.5em;
+    background-color: var(--white);
+    border-radius: 1em;
 }
 
 .card-content-comment h5 {
-  color: var(--primary);
-  font-weight: 600;
-  margin-bottom: -0.2em;
-  font-size: 1rem;
-  margin-bottom: 2px;
+    color: var(--primary);
+    font-weight: 600;
+    margin-bottom: -0.2em;
+    font-size: 1rem;
+    margin-bottom: 2px;
 }
 
 .card-content-comment p {
-  color: var(--black);
-  font-size: 0.7rem;
-  font-weight: 600;
-  letter-spacing: -0.7px;
-  line-height: 0.8rem;
+    color: var(--black);
+    font-size: 0.7rem;
+    font-weight: 600;
+    letter-spacing: -0.7px;
+    line-height: 0.8rem;
 }
 
 .comment-form {
-  /* background-color: violet; */
-  display: flex;
-  width: 80vw;
-  justify-content: space-around;
-  flex-direction: row;
-  align-items: center;
+    /* background-color: violet; */
+    display: flex;
+    width: 80vw;
+    justify-content: space-around;
+    flex-direction: row;
+    align-items: center;
 }
 
 .comment-form textarea {
-  background: var(--white);
-  /* background: none; */
-  border-radius: 10px;
-  height: 45px;
-  max-height: 10vh;
-  border: none;
-  width: 60vw;
-  color: var(--black);
-  font-size: 0.8em;
+    background: var(--white);
+    /* background: none; */
+    border-radius: 10px;
+    height: 45px;
+    max-height: 10vh;
+    border: none;
+    width: 60vw;
+    color: var(--black);
+    font-size: 0.8em;
 }
 
 .share-panel {
-  display: grid;
+    display: grid;
     width: 80vw;
     background-color: var(--white);
     grid-template-columns: 1fr 1fr;
@@ -307,38 +317,38 @@ body {
     gap: 3px;
     align-items: center;
     justify-items: center;
-
 }
 
 .share-panel .icon-panel-share {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 3px;
-  align-items: center;
-  justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3px;
+    align-items: center;
+    justify-items: center;
 }
 
-.share-panel .icon-panel-share li{
-  margin-left: 0.3em;
-  background-color: var(--white);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), -3px -3px 4px -2px rgba(98, 1, 148, 0.27);
-  border-radius: 5px;
-  padding: 0.3rem;
+.share-panel .icon-panel-share li {
+    margin-left: 0.3em;
+    background-color: var(--white);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
+        -3px -3px 4px -2px rgba(98, 1, 148, 0.27);
+    border-radius: 5px;
+    padding: 0.3rem;
 }
 
 .share-panel .icon-person-panel {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 2px;
-  align-items: center;
-  justify-items: center;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), -3px -3px 4px -2px rgba(98, 1, 148, 0.27);
-  height: 3.5em;
-  width: fit-content;
-  border-radius: 5px;
-
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2px;
+    align-items: center;
+    justify-items: center;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
+        -3px -3px 4px -2px rgba(98, 1, 148, 0.27);
+    height: 3.5em;
+    width: fit-content;
+    border-radius: 5px;
 }
 
-.share-panel .icon-person-panel li{
-  margin: 0 0.2em;
+.share-panel .icon-person-panel li {
+    margin: 0 0.2em;
 }
