--- a/public/css/style.css
+++ b/public/css/style.css
@@ -231,14 +231,29 @@ body {
 .categories {
     /* position: sticky; */
     margin-top: 1rem;
-    margin-bottom: -1.5rem;
+    /* margin-bottom: 0.2rem; */
     display: flex;
     overflow-x: auto;
 }
 
-.btn-categoires {
+.btn-categories:link {
     margin-right: 0.5rem;
+    border: 1px solid var(--white);
+    color: var(--white);
+    border-radius: 10px;
+    font-weight: 600;
 }
+
+.btn-categories:hover {
+    background-color: var(--white);
+    color: var(--secondary);
+}
+
+.active-btn-categories {
+    background-color: var(--white);
+    color: var(--secondary);
+}
+
 
 #more {
     display: none;
