--- a/public/css/style.css
+++ b/public/css/style.css
@@ -436,10 +436,14 @@ body {
     width: max-content;
     height: max-content;
     padding: 0.5rem;
-    background-color: var(--secondary);
+    border: 2px solid var(--white);
     border-radius: 5px;
-    box-shadow: 2px 3px 9px rgba(0, 0, 0, 0.25);
-    
+    box-shadow: 2px 3px 9px rgba(0, 0, 0, 0.25); 
+}
+
+.dm-btn:hover {
+    border: 2px solid var(--secondary);
+    background-color: var(--secondary);
 }
 
 .dm-btn img {
@@ -451,16 +455,24 @@ body {
     height: max-content;
     padding: 0.1rem 7vw;
     margin-left: 10px;
-    background-color: var(--white);
+    /* background-color: var(--white); */
+    border: 2px solid var(--white);
     border-radius: 5px;
     box-shadow: 2px 3px 9px rgba(0, 0, 0, 0.25);
 }
 
-.follow-btn p{
+.follow-btn:hover {
+    background-color: var(--white);
+}
+
+.follow-btn p:hover{
     color: var(--primary);
+}
+
+.follow-btn p{
+    color: var(--white);
     font-size: 1.8rem;
     font-weight: 700;
-    
 }
 
 .status-count {
@@ -536,42 +548,3 @@ body {
 
 }
 
-.flip-card {
-    background-color: transparent;
-    /* width: 300px;
-    height: 300px;
-    perspective: 1000px; */
-  }
-  
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.6s;
-    transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  }
-  
-  .flip-card:hover .flip-card-inner {
-    transform: rotatex(-180deg);
-  }
-  
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-  }
-  
-  .flip-card-front {
-    background-color: #bbb;
-    color: black;
-  }
-  
-  .flip-card-back {
-    background-color: #2980b9;
-    color: white;
-    transform: rotatex(180deg);
-  }
