--- a/public/css/style.css
+++ b/public/css/style.css
@@ -410,7 +410,7 @@ body {
     margin-top: 20vh;
     background-color: var(--secondary);
     height: 100%;
-    border-top-left-radius: 40px;
+    border-radius: 20px;
     display: flex;
     flex-direction: column;
 }
@@ -552,3 +552,42 @@ body {
 
 }
 
+.content-add-edit-post {
+    background-color: var(--secondary);
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    border-radius: 20px;
+}
+
+.group-input {
+    border: 1px solid var(--white);
+    padding: 0.6rem;
+    border-radius: 10px;
+}
+
+.group-input input{
+    background: transparent;
+    border: transparent;
+}
+
+.form-control {
+    color: var(--white)!important;
+}
+
+.group-input input:focus{
+    background: transparent;
+    border: transparent;
+}
+
+
+.form-select {
+    background-color: var(--primary);
+    border: none;
+    color: var(--white);
+    
+}
+
+.group-select {
+    box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.25);
+}
